# autoops

./: .gitignore  README.md  pyproject.toml
configs/: organize_files.yaml
src/autoops/: __main__.py  cli.py
src/autoops/config/: loader.py
src/autoops/core/: job.py  registry.py  runner.py
src/autoops/jobs/: example.py  organize_files.py
tests/: test_cli.py  test_job_organize_files.py  test_registry.py  test_runner.py
