[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoops"
version = "0.1.0"
description = "Automation Orchestrator focused on organized and scalable Python automations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "PyYAML>=6.0.0",
    "platformdirs>=4.0.0"
]

[project.scripts]
autoops = "autoops.cli:entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
